# GEN-AI

./: .dockerignore  .env.example  .gitignore  Plan.md  README.md  package-lock.json  package.json
api/: .dockerignore  .env.example  Dockerfile  __init__.py  pyproject.toml
api/app/: main.py
api/app/agent/: pev.py  tools.py
api/app/api/: router.py
api/app/api/routes/: assets.py  chat.py  datasets.py  jobs.py  knowledge.py
api/app/core/: config.py  security.py
api/app/db/: session.py
api/app/dependencies/: __init__.py  auth.py  services.py
api/app/models/: entities.py
api/app/repositories/: chat.py  in_memory.py  interfaces.py  sqlalchemy.py
api/app/schemas/: assets.py  datasets.py  jobs.py  knowledge.py
api/app/services/: assets.py  chat.py  datasets.py  embedder.py  general_chat.py  knowledge.py  model_aliases.py  rag.py  router.py  sql.py  storage.py
api/app/services/parsers/: knowledge.py  tabular.py
api/tests/: test_agent_pev.py  test_agent_tools.py  test_chat_orchestration.py  test_chat_repository.py  test_general_chat.py  test_phase1_api.py  test_phase2_asset_domain.py  test_phase2_ingestion.py  test_rag_relevance.py  test_router.py  test_smoke_e2e.py  test_text_to_sql.py  test_unified_assets.py
docs/: phase-1-review.md
infra/: .env.example  docker-compose.yml
infra/sql/: 001_phase1_init.sql  002_phase2_chunks.sql  003_knowledge_layer.sql  003_phase3_chat.sql  004_dataset_metadata.sql  005_unified_assets.sql  006_fix_knowledge_chunk_embedding_dimension.sql  008_align_asset_status_enum.sql
web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx
web/app/dashboard/: dashboard-shell.tsx  page.tsx
web/components/: login-form.tsx
web/lib/: config.ts
worker/: .env.example  Dockerfile  __init__.py  pyproject.toml
worker/app/: __init__.py  main.py
worker/app/core/: settings.py
worker/app/services/: chunker.py  embedder.py  models.py  parser.py  processors.py  storage.py
worker/tests/: test_ingestion.py  test_placeholder.py  test_settings.py
(+7 files in other folders)
